project(TDrivers)

add_executable(TConvectionDiffusion TConvectionDiffusion.cpp)
add_executable(THeatEquation THeatEquation.cpp)
add_executable(TSpaceTimeConfusion TSpaceTimeConfusion.cpp)
add_executable(TInviscidBurgers TInviscidBurgers.cpp)
add_executable(TSpaceTimeIncompressible TSpaceTimeIncompressible.cpp)
add_executable(TSpaceTimeCompressible TSpaceTimeCompressible.cpp)
